jv/crates/jv_codegen_java/src/tests/snapshots/jv_codegen_java__tests__target_matrix__sealed_java21.snap
---
source: crates/jv_codegen_java/src/tests/target_matrix.rs
assertion_line: 86
expression: source
---
// Generated by jv (ターゲット: Java 21)
// 自動生成ファイル - このファイルへの手動変更は上書きされます。

package com.example;

public final class Result {
    // Fallback: sealed hierarchy permits [Success, Failure] emulated for Java 21
}

public class Success extends Result {
}

public class Failure extends Result {
}
