jv/crates/jv_codegen_java/src/tests/snapshots/jv_codegen_java__tests__target_matrix__sealed_java25.snap
---
source: crates/jv_codegen_java/src/tests/target_matrix.rs
assertion_line: 73
expression: source
---
// Generated by jv (ターゲット: Java 25)
// 自動生成ファイル - このファイルへの手動変更は上書きされます。

package com.example;

public sealed class Result permits Success, Failure {
}

public class Success extends Result {
}

public class Failure extends Result {
}
